syntax = "proto3";
package userProto;
option go_package = "./";

message User {
  string id = 1;
  string name = 2;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}


message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  string id = 1;
}


message ListUserRequest {

}

message ListUserResponse {
  User user = 1;
}


service UserService{
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc DeletePokemon (DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListPokemon (ListUserRequest) returns (stream ListUserResponse);
}
